Main slider: fix tags on mobile

--- a/app/assets/stylesheets/media.scss
+++ b/app/assets/stylesheets/media.scss
@@ -20,7 +20,7 @@
 					min-height:200px;
 				}
 				.aboutEvent { 
-					li {
+					li :not(.tag) {
 						&:nth-child(2) {
 							font-size: 22px;
 						}
